Closed Bug 1335166 Opened 9 years ago Closed 9 years ago

[EME] Backout Bug 1324925

Categories

(Core :: Audio/Video: Playback, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox53 --- fixed

People

(Reporter: cpearce, Assigned: cpearce)

References

Details

Attachments

(1 file)

I misinterpreted the spec in Bug 1324925, and need to back that out from 53, i.e. Aurora.
Comment on attachment 8831799 [details] [diff] [review] Backed out changeset 229e1278d976i (Bug 1335166) Requesting approval to back out this change from 53, i.e. Aurora. Approval Request Comment [Feature/Bug causing the regression]: Bug 1324925. [User impact if declined]: Some EME videos will incorrectly report their expiration time to JavaScript. This could potentially cause EME video playback to fail. [Is this code covered by automated tests?]: We don't have tests covering EME expiration as we don't have our own DRM server. [Has the fix been verified in Nightly?]: Yes, I have verified the backout is as expected in Nightly. [Needs manual test from QE? If yes, steps to reproduce]: No. [List of other uplifts needed for the feature/fix]: None. [Is the change risky?]: No. [Why is the change risky/not risky?]: It's basically removing a divide by 1000. [String changes made/needed]: None.
Attachment #8831799 - Flags: approval-mozilla-aurora?
Comment on attachment 8831799 [details] [diff] [review] Backed out changeset 229e1278d976i (Bug 1335166) Regression from 53, let's back this out from aurora.
Attachment #8831799 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
landed this backout in aurora
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: