Bug 1335166 - Backed out changeset 229e1278d976i (Bug 1335166). r=backout a=lizzard

MozReview-Commit-ID: NnHo7YXFls