dom/media/eme/MediaKeySession.cpp
@@ -638,14 +638,14 @@ MediaKeySession::MakePromise(ErrorResult& aRv, const nsACString& aName)
 }
 
 void
-MediaKeySession::SetExpiration(double aSecondsSinceEpoch)
+MediaKeySession::SetExpiration(double aExpiration)
 {
   EME_LOG("MediaKeySession[%p,'%s'] SetExpiry(%.12lf) (%.2lf hours from now)",
           this,
           NS_ConvertUTF16toUTF8(mSessionId).get(),
-          aSecondsSinceEpoch,
-          aSecondsSinceEpoch - double(time(0)) / (60 * 60));
-  mExpiration = aSecondsSinceEpoch;
+          aExpiration,
+          (aExpiration - 1000.0 * double(time(0))) / (1000.0 * 60 * 60));
+  mExpiration = aExpiration;
 }
 
 EventHandlerNonNull*
